# Direct_machining_with_manipulator

./: README.md
force_bag/: drill2.bag  drill_notadjust.bag  drill_test.bag  subset.bag
gripper_2/: CMakeLists.txt  package.xml
gripper_2/launch/: display.launch  gazebo.launch
gripper_2/urdf/: gripper_2.csv  gripper_2.urdf
keyence_ros/: CMakeLists.txt  PCD_generate.md  package.xml  ros_command.md
keyence_ros/arduino/env_test/zaxis_v.1.1.5/: zaxis_v.1.1.5.ino
keyence_ros/bagfiles/: 2020-04-23-10-12-44.bag  2020-04-23-10-28-38.bag  2020-04-23-10-30-09.bag  2020-04-23-11-19-36.bag  26_disk_640_2.bag  2disk_data10.bag  2disk_data2.bag  2disk_data3.bag  2disk_data4.bag  2disk_data5.bag  2disk_data6.bag  2disk_data7.bag  2disk_data8.bag  2disk_data9.bag  2disk_lpy.bag  2dist_data_26_1.bag  bearing_profile.bag  data5.bag  machining_360.bag  machining_360_2.bag  mid_1.bag  mid_2.bag  mobile_slot_data1.bag  mobile_slot_data2.bag  mobile_slot_data3.bag  mouse_profile.bag  slot_mill_data1.bag  slot_mill_data2.bag  slot_mill_data3.bag  slot_mill_data4.bag  specimen_laser.bag  subset.bag  surface_profile.bag  surface_profile2.bag  wheel_profile.bag  wheel_profile_2.bag
keyence_ros/bagfiles/laser_output/: after.bag  after2.bag  after3.bag  data.bag  data2.bag  data3.bag
keyence_ros/bagfiles/pcd_save/: 0.000000000.pcd  pcd_save1.bag
keyence_ros/launch/: keyence_simulation.launch
keyence_ros/msg/: keyence_laser.msg
keyence_ros/scripts/: heat_map.py  linescan_pcd.py  load_normal_vector.py  load_np.py  lpf_laser.py  normal_vector.py  numyp_to_pcd.py  open3d_load.py  pcl_helper.py  pptk_keyboard.py  pptk_view.py  profile_check.py  simple_filter_process.py  start_node.py  sub_profile.py
keyence_ros/src/: gen_surface.cpp  keyence_laser.cpp  keyence_output.cpp  keyence_pcl_sub.cpp  keyence_profile.cpp  lk_keyence_output.cpp  lpf.cpp  pcl_to_csv.cpp  process_test.cpp  stream_16.cpp
staubli_tx90_gazebo/config/: tx90_arm_controller.yaml
staubli_tx90_gazebo/launch/: load_cfrp.launch  load_tx90.launch  spawn_cfrp.launch  spawn_tx90.launch  tx90_control.launch  tx90_gazebo.launch  tx90_real.launch
test_bed/: CMakeLists.txt  package.xml
test_bed/include/: preprocess_pointcloud.h
test_bed/launch/: gazebo.launch
test_bed/meshes/: PVS_1000_chuck.STL  surface_cfrp.STL
test_bed/msg/: boundary.msg
test_bed/pcd_data/: .fd3e5926f3e08bb34782dd381feb9ac04d065f2d.cam  Kdtree_AllinOne.pcd  Kdtree_KNN.pcd  Kdtree_test2.pcd  Kdtree_test_KNN.pcd  after_seg.pcd  before_seg.pcd  cluster1.pcd  cluster10.pcd  cluster10.ply  cluster11.pcd  cluster12.pcd  cluster13.pcd  cluster14.pcd  cluster15.pcd  cluster16.pcd  cluster2.pcd  cluster3.pcd  cluster4.pcd  cluster5.pcd  cluster6.pcd  cluster6.ply  cluster7.pcd  cluster8.pcd  cluster9.pcd  new_cluster1.pcd  new_cluster10.pcd  new_cluster11.pcd  new_cluster12.pcd  new_cluster13.pcd  new_cluster14.pcd  new_cluster15.pcd  new_cluster16.pcd  new_cluster17.pcd  new_cluster18.pcd  new_cluster19.pcd  new_cluster2.pcd  new_cluster20.pcd  new_cluster21.pcd  new_cluster22.pcd  (+47 more)
test_bed/rviz/: tf_marker.rviz
test_bed/script/: animation.py  animation_pub.py  basic_grid.py  basic_grid_v1.py  fullcoverage_path.py  gridbasesweepsearch.py  marker_test.py  multiarray_test.py  normal_orientation.py  ply_to_numpy.py  pointcloud_drillpoint.py  poly_test.py  scan_path_planner.py  scan_path_v2.py  scan_path_v2_done.py  scan_path_v3.py  simple_viewer.py  temp.py
test_bed/src/: edge_detection.cpp  extract_boundary.cpp  find_normal.cpp  pcd_to_rviz.cpp  preprocess_pointcloud.cpp  save_pcd.cpp  tf_change.cpp
test_bed/urdf/: freeform_cfrp.urdf  test_bed.csv  test_bed.urdf
tx90_moveit_client/: CMakeLists.txt  package.xml
tx90_moveit_client/scripts/: Untitled.ipynb  client_tutorial.py  flag_pub.py  geometry_msgs.msg  home_pose.py  joint_space_test.py  moveit_msgs.msg  spatialmath.py  surface_plot.py  test.py  test_ros.py  tool_tf_listener.py  traj_plot.py  tx90_get_info.py  tx90_joint_space.py
tx90_moveit_client/scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
tx90_moveit_client/scripts/RL/: README.md  fk_test.py  utils_tx90.py
tx90_moveit_client/scripts/RL/env/: gym_test.py  main_env.py  pybullet_env.py  utils.py
tx90_moveit_client/scripts/RL/urdf/: tx90.urdf
tx90_moveit_client/scripts/mathfunctions/: spatialmath.py
tx90_moveit_client/src/: example1.cpp  redundant_joint_control.cpp  scan_trajgen.cpp  scan_trajgen_sub.cpp  tool_tf_listener.cpp
tx90_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
tx90_path_planner/: CMakeLists.txt  package.xml
tx90_path_planner/include/: preprocess_pointcloud.h
tx90_path_planner/launch/: display.launch  gazebo.launch
tx90_path_planner/meshes/: PVS_1000_chuck.dae  freeform_cfrp.STL
tx90_path_planner/msg/: scan_path.msg
tx90_path_planner/pcd_data/: bun000.ply  bun00005.pcd  bun0001.pcd  bun0002.pcd  bun0005.pcd  bun_test.pcd  downsample_normal_surface.pcd  downsample_normal_surface.ply  fig_cluster1.pcd  fig_cluster2.pcd  fig_cluster3.pcd  new_cluster1.pcd  new_cluster2.pcd  new_cluster3.pcd  new_cluster4.pcd  new_cluster5.pcd  new_cluster6.pcd  new_cluster7.pcd  new_cluster7.ply  passfilter_pc.pcd  region_growing_rgb_result.pcd
tx90_path_planner/script/: 3d_plot.py  basic_grid_work.py  check.py  contour_plot.py  curvature_visualize.py  passthrough.py  pointcloud_drillpoint.py  rotation_test.py  scan_path_v3.py  scan_path_xdir.py  scan_path_ydir.py  scan_path_ydir_ori.py  simple_viewer.py  waypoint.py
tx90_path_planner/src/: extract_boundary.cpp  find_normal.cpp  normal_visualize.cpp  pass.cpp  preprocess_pointcloud.cpp  tf_change.cpp
tx90_path_planner/urdf/: PVS_1000_chuck.urdf  surface_cfrp.urdf  test_bed.csv  test_bed.urdf
tx90_spindle/: CMakeLists.txt  package.xml
tx90_ui/: form.ui  opt_curve2_v1.xlsx  optimized_result.xlsx  ros_curve2_v1.xlsx  ros_flat_v2.xlsx  ros_non_optimized_result.xlsx  test.xlsx  test2.xlsx  test3.xlsx  ui_test.py
tx_90_ikfast_tx_90_plugin/: CMakeLists.txt  package.xml  tx_90_tx_90_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
(+50 files in other folders)
