<?xml version="1.0"?>
<package format="2">
  <name>tx90_moveit_client</name>
  <version>0.0.0</version>
  <description>The tx90_moveit_client package</description>

  <maintainer email="hglee93@gmail.com">Haegu Lee</maintainer>

  <license>TODO</license>

  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>

  <build_depend>tf_conversions</build_depend>
  <build_depend>descartes_core</build_depend>
  <build_depend>descartes_moveit</build_depend>
  <build_depend>descartes_planner</build_depend>
  <build_depend>descartes_trajectory</build_depend>
  <build_depend>descartes_utilities</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roslib</exec_depend>
  <exec_depend>descartes_core</exec_depend>
  <exec_depend>descartes_moveit</exec_depend>
  <exec_depend>descartes_planner</exec_depend>
  <exec_depend>descartes_trajectory</exec_depend>
  <exec_depend>descartes_utilities</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <build_export_depend>moveit_commander</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
