<package format="2">
  <name>test_bed</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for test_bed</p>
    <p>This package contains configuration data, 3D models and launch files
for test_bed robot</p>
  </description>
  <author>Haegu Lee, Min-seo Kim</author>
  <maintainer email="hglee93@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <build_depend>descartes_core</build_depend>
  <build_depend>descartes_moveit</build_depend>
  <build_depend>descartes_trajectory</build_depend>
  <build_depend>descartes_planner</build_depend>

  <build_depend>trajectory_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <exec_depend>descartes_core</exec_depend>
  <exec_depend>descartes_moveit</exec_depend>
  <exec_depend>descartes_trajectory</exec_depend>
  <exec_depend>descartes_planner</exec_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>libpcl-all</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>